change dockerfile, serverxml and yaml file

--- a/chart/modresortswar/templates/migration-deployment.yaml
+++ b/chart/modresortswar/templates/migration-deployment.yaml
@@ -34,3 +34,4 @@ spec:
               value: message,trace,accessLog,ffdc
           ports:
             - containerPort: 9080
+	    - containerPort: 9443
