download war by mvn 6

--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,40 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <plugins>
+    <plugin>
+      <artifactId>exec-maven-plugin</artifactId>
+        <groupId>org.codehaus.mojo</groupId>
+        <version>1.2.1</version>
+          <executions>
+            <execution>
+               <id>My Command Runner</id>
+               <phase>install</phase>
+               <goals>
+                  <goal>exec</goal>
+               </goals>
+               <configuration>
+                  <executable>find</executable>
+                  <arguments>
+                    <argument>/ -name modresorts.war</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            <execution>
+               <id>My Command Runner</id>
+               <phase>install</phase>
+               <goals>
+                  <goal>exec</goal>
+               </goals>
+               <configuration>
+                  <executable>hostname</executable>
+                  <arguments>
+                    <argument></argument>
+                  </arguments>
+                </configuration>
+              </execution>
+           </executions>
+        </plugin>
+    </plugins>
 </project>
