--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,15 @@
     </dependency>
   </dependencies>
 
-  <plugins>
-    <plugin>
-      <artifactId>exec-maven-plugin</artifactId>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>exec-maven-plugin</artifactId>
         <groupId>org.codehaus.mojo</groupId>
         <version>1.2.1</version>
           <executions>
             <execution>
-               <id>My Command Runner</id>
+               <id>My Command Runner 1</id>
                <phase>install</phase>
                <goals>
                   <goal>exec</goal>
@@ -39,8 +40,8 @@
                   </arguments>
                 </configuration>
               </execution>
-            <execution>
-               <id>My Command Runner</id>
+              <execution>
+               <id>My Command Runner 2</id>
                <phase>install</phase>
                <goals>
                   <goal>exec</goal>
@@ -55,4 +56,5 @@
            </executions>
         </plugin>
     </plugins>
+  </build>
 </project>
