--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,26 @@
 
   <build>
     <plugins>
+ <plugin>
+        <groupId>com.googlecode.maven-download-plugin</groupId>
+        <artifactId>download-maven-plugin</artifactId>
+        <version>1.3.0</version>
+        <executions>
+          <execution>
+            <!-- the wget goal actually binds itself to this phase by default -->
+            <phase>process-resources</phase>
+            <goals>
+              <goal>wget</goal>
+            </goals>
+            <configuration>
+              <url>http://9.26.42.226:9666/com/ibm/ta/modresorts/1.0/modresorts-1.0.war</url>
+              <outputFileName>tmp/modresorts-1.0.war</outputFileName>
+              <!-- default target location, just to demonstrate the parameter -->
+              <outputDirectory>${project.build.directory}</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <artifactId>exec-maven-plugin</artifactId>
         <groupId>org.codehaus.mojo</groupId>
@@ -29,7 +49,7 @@
           <executions>
             <execution>
                <id>My Command Runner 1</id>
-               <phase>install</phase>
+               <phase>process-resources</phase>
                <goals>
                   <goal>exec</goal>
                </goals>
@@ -39,7 +59,7 @@
               </execution>
               <execution>
                <id>My Command Runner 2</id>
-               <phase>install</phase>
+               <phase>process-resources</phase>
                <goals>
                   <goal>exec</goal>
                </goals>
