--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
             </goals>
             <configuration>
               <url>http://9.26.42.226:9666/com/ibm/ta/modresorts/1.0/modresorts-1.0.war</url>
-              <outputFileName>tmp/modresorts-1.0.war</outputFileName>
+              <outputFileName>modresorts-1.0.war</outputFileName>
               <!-- default target location, just to demonstrate the parameter -->
               <outputDirectory>${project.build.directory}</outputDirectory>
             </configuration>
@@ -66,7 +66,7 @@
                <configuration>
                   <executable>ls</executable>
                   <arguments>
-                    <argument>tmp/</argument>
+                    <argument>.</argument>
                   </arguments>
                 </configuration>
               </execution>
