--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
           <executions>
               <execution>
                <id>create tmp dir</id>
-               <phase>process-resources</phase>
+               <phase>pre-process-resources</phase>
                <goals>
                   <goal>exec</goal>
                </goals>
@@ -45,7 +45,7 @@
        <plugin>
         <groupId>com.googlecode.maven-download-plugin</groupId>
         <artifactId>download-maven-plugin</artifactId>
-        <version>1.3.0</version>
+        <version>1.4.1</version>
         <executions>
           <execution>
             <!-- the wget goal actually binds itself to this phase by default -->
@@ -62,6 +62,53 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>exec-maven-plugin</artifactId>
+        <groupId>org.codehaus.mojo</groupId>
+        <version>1.2.1</version>
+          <executions>
+            <execution>
+               <id>check current dir</id>
+               <phase>post-process-resources</phase>
+               <goals>
+                  <goal>exec</goal>
+               </goals>
+               <configuration>
+                  <executable>pwd</executable>
+                </configuration>
+              </execution>
+              <execution>
+               <id>check downloaded file 1</id>
+               <phase>post-process-resources</phase>
+               <goals>
+                  <goal>exec</goal>
+               </goals>
+               <configuration>
+                  <executable>find</executable>
+                  <arguments>
+                    <argument>${project.build.directory}</argument>
+                    <argument>-name</argument>
+                    <argument>modresorts-1.0.war</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+              <execution>
+               <id>check downloaded file 2</id>
+               <phase>post-process-resources</phase>
+               <goals>
+                  <goal>exec</goal>
+               </goals>
+               <configuration>
+                  <executable>find</executable>
+                  <arguments>
+                    <argument>/</argument>
+                    <argument>-name</argument>
+                    <argument>modresorts-1.0.war</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+           </executions>
+       </plugin>
     </plugins>
   </build>
 </project>
