--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,8 @@
                   </arguments>
                 </configuration>
               </execution>
-                             <id>check downloaded file 3</id>
+              <execution>
+               <id>check downloaded file 3</id>
                <phase>verify</phase>
                <goals>
                   <goal>exec</goal>
