--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,39 @@
 
   <build>
     <plugins>
+    <plugin>
+        <artifactId>exec-maven-plugin</artifactId>
+        <groupId>org.codehaus.mojo</groupId>
+        <version>1.2.1</version>
+          <executions>
+              <execution>
+               <id>create dir for db2driver</id>
+               <phase>initialize</phase>
+               <goals>
+                  <goal>exec</goal>
+               </goals>
+               <configuration>
+                  <executable>mkdir</executable>
+                  <arguments>
+                    <argument>{project.build.directory}/db2driver</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+              <execution>
+               <id>create dir for application binary</id>
+               <phase>initialize</phase>
+               <goals>
+                  <goal>exec</goal>
+               </goals>
+               <configuration>
+                  <executable>mkdir</executable>
+                  <arguments>
+                    <argument>{project.build.directory}/binary</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+           </executions>
+       </plugin>
        <plugin>
         <groupId>com.googlecode.maven-download-plugin</groupId>
         <artifactId>download-maven-plugin</artifactId>
@@ -33,10 +66,22 @@
               <goal>wget</goal>
             </goals>
             <configuration>
-              <url>http://9.26.42.226:9666/com/ibm/ta/modresorts/1.0/modresorts-1.0.war</url>
+              <url>http://9.108.121.139:9666/com/ibm/ta/modresorts/1.0/modresorts-1.0.war</url>
               <outputFileName>modresorts-1.0.war</outputFileName>
               <!-- download to the workspace target dir -->
-              <outputDirectory>${project.build.directory}</outputDirectory>
+              <outputDirectory>${project.build.directory}/binary</outputDirectory>
+            </configuration>
+          </execution>
+          <execution>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>wget</goal>
+            </goals>
+            <configuration>
+              <url>http://9.108.121.139:9666/1267/db2jcc.jar</url>
+              <outputFileName>db2jcc.jar</outputFileName>
+              <!-- download to the workspace target dir -->
+              <outputDirectory>${project.build.directory}/db2driver</outputDirectory>
             </configuration>
           </execution>
         </executions>
