--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
               <outputDirectory>${project.build.directory}</outputDirectory>
               <username>testId</username>
               <password>testPwd</password>
+              <overwrite>true</overwrite>
             </configuration>
           </execution>
           <execution>
@@ -55,6 +56,7 @@
               <outputDirectory>${project.build.directory}</outputDirectory>
               <username>testId</username>
               <password>testPwd</password>
+              <overwrite>true</overwrite>
             </configuration>
           </execution>
         </executions>
